packages/svelte/tests/compiler-errors/samples/runes-wrong-state-raw-args/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'rune_invalid_arguments_length',
		message: '`$state.raw` must be called with zero or one arguments'
	}
});
